--- a/nginx.conf
+++ b/nginx.conf
@@ -85,8 +85,7 @@ http {
     #gzip_min_length 10240;
     #gzip_proxied expired no-cache no-store private auth;
     gzip_proxied any;  
-    #gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml application/css image/png image/gif image/jpeg image/jpg ;
-	gzip_types
+     gzip_types
    	 text/plain
    	 text/css
     	 text/js
@@ -107,7 +106,7 @@ http {
 
     server {
         listen       80;
-       # server_name  localhost czchat.trixchat.com;
+       # server_name  localhost www.xyz.com;
       server_name  localhost ;
 	
 	charset utf-8;
