--- a/nginx.conf
+++ b/nginx.conf
@@ -194,7 +194,7 @@ http {
     
 #    server {
 #        listen       488 ssl;
-#        server_name  localhost czchat.trixchat.com;
+#        server_name  localhost xyz.www.com;
 #       root /var/www/html;
 #    ssl_certificate /etc/letsencrypt/live/czchat.trixchat.com/fullchain.pem; # managed by Certbot
 #    ssl_certificate_key /etc/letsencrypt/live/czchat.trixchat.com/privkey.pem; # managed by Certbot
